[gd_scene load_steps=6 format=3 uid="uid://ckgxkruavdfs5"]

[ext_resource type="Script" path="res://scripts/nodes_scripts/continue_screen.gd" id="1_knaho"]
[ext_resource type="Texture2D" uid="uid://d332xdk7s640r" path="res://assets/continueScreenText.png" id="2_6870x"]
[ext_resource type="Texture2D" uid="uid://c1uxefkdapm5v" path="res://assets/continueScreenNo.png" id="3_0b3sn"]
[ext_resource type="Texture2D" uid="uid://ceo8o0s2unla2" path="res://assets/continueScreenYes.png" id="4_8plik"]
[ext_resource type="AudioStream" uid="uid://cl7278hevk61i" path="res://assets/music/Sad Song - Super Mario RPG_ Legend of the Seven Stars (Rip GiIvaSunner).mp3" id="5_8nlqh"]

[node name="ContinueScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_knaho")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -635.0
offset_top = 86.0
offset_right = 630.0
offset_bottom = 519.0
grow_horizontal = 2
texture = ExtResource("2_6870x")

[node name="NoButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1076.0
offset_top = 718.0
offset_right = 1527.0
offset_bottom = 892.0
icon = ExtResource("3_0b3sn")
flat = true

[node name="YesButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 412.0
offset_top = 653.0
offset_right = 900.0
offset_bottom = 901.0
icon = ExtResource("4_8plik")
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8nlqh")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="YesButton" to="." method="_on_yes_button_pressed"]
